--- a/Programacao_Microinformatica/Atividades/Formulario_Cadastro.html
+++ b/Programacao_Microinformatica/Atividades/Formulario_Cadastro.html
@@ -6,6 +6,9 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
+
+<!--Atividade da aula 25 de agosto de 2025.-->
+    
     <h1>Cadastro</h1>
     <h2>Preencha seus dados para se cadastrar.</h2>
     
@@ -70,4 +73,5 @@
     <img src="https://media.istockphoto.com/id/1692137254/pt/foto/cyber-security-data-protection-information-from-system-hacked-warning-alert-cyber-attack-on.jpg?s=2048x2048&w=is&k=20&c=5hcsw9wj4uy1alwRzo4G_DcziN2JjEC7E8eZmaEss64=" alt="Segurança digital" width="300">
 
 </body>
+
 </html>
